# cpp_examples

./: .gitignore  README.md
basic_templates/: basic_function_templates.cpp  io_util.h  main.cpp
big_three/: main.cpp
cmake/: CMakeLists.txt
cmake/CMake/: SimpleProjectMacros.cmake
cmake/src/: main.cpp  mylib.cpp
cmake/src/include/: mylib_private.h
scoping/: main.cpp
